--- a/app/src/main/res/layout/activity_poll_vote.xml
+++ b/app/src/main/res/layout/activity_poll_vote.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:gravity="center"
         android:text="Title"
@@ -70,7 +70,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="336dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:background="#34d875"
         android:onClick="vote"
         android:text="Yes"
@@ -86,7 +85,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="336dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:background="#d93f35"
         android:onClick="vote"
         android:text="No"
@@ -102,7 +100,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="336dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:background="#E67f00"
         android:onClick="vote"
         android:text="Neutral"
@@ -196,7 +193,7 @@
         android:paddingEnd="10dp"
         android:text="Delete Poll"
         android:textColor="#EFE7E7"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.98"
         app:layout_constraintStart_toStartOf="parent"
@@ -206,7 +203,7 @@
         android:id="@+id/editpollTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="42dp"
         android:layout_marginEnd="16dp"
         android:onClick="editTitle"
         android:src="@drawable/ic_mode_edit_black_24dp"
@@ -282,7 +279,6 @@
         android:layout_height="44dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:max="101"
         android:progress="50"
         android:progressDrawable="@drawable/progress_no"
@@ -298,7 +294,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="17dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="8dp"
         android:text="Yes (5/10): 50%"
         android:textColor="@android:color/white"
